Ajustes nos testes automatizados afim de utilizarem o JUnit 5 integrado ao Mockito.